# arbitrage

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  railway.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  onboarding-help.yml
.github/workflows/: ci.yml  desktop-v1-headless-nightly.yml  release-windows.yml
desktop-v1/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop-v1/src/: index.ts  main.tsx
desktop-v1/src-tauri/: Cargo.toml  tauri.conf.json
desktop-v1/src-tauri/capabilities/: default.json
desktop-v1/src-tauri/src/: main.rs
docs/: architecture.md  bot-recipes.md  first-paper-run.md  live-trading-limitations.md  privacy-and-secrets.md  prompt-pack-implementation-map.md  release-checklist.md  release-notes-template.md  release-process.md  risk-model.md  schema.md  strategy-contributor-guide.md  sup-v1-consumer-spec.md  superior-graphics-system.md  testing.md
docs/designs/: sup-packs-and-challenge-spec.md  sup-practice-world.md
packaging/macos_poc/: Info.plist  entitlements.plist
packaging/windows/: desktop_entry.py  installer.iss  market_data_recorder_app.spec  market_data_recorder_smoke.spec  smoke_entry.py
scripts/: bootstrap-iscc.ps1  build-windows-release.ps1  generate_brand_assets.py  smoke-test-installer.ps1  smoke-test-windows-release.py  validate-superior.ps1
shared/: focusMechanics.ts  practiceMoneyProfiles.ts
site/: astro.config.mjs  package-lock.json  package.json  playwright.config.mjs  railway.toml
site/scripts/: generate-mascots.mjs
site/tests/: landing.spec.ts
src/market_data_recorder/: __init__.py  arbitrage.py  book_state.py  cli.py  config.py  hashing.py  logging.py  models.py  processor.py  replay.py  service.py  storage.py  utils.py  verify.py  wlfi.py
src/market_data_recorder_desktop/: __init__.py  app_types.py  benchmark_lab.py  bot_recipes.py  bot_services.py  controller.py  copilot.py  credentials.py  diagnostics.py  main.py  paths.py  (+6 more)
tests/: conftest.py  test_arbitrage.py  test_benchmark_lab.py  test_bot_services.py  test_desktop_services.py  test_desktop_ui.py  test_market_websocket.py  test_processor.py  test_qa_client.py  test_service_and_verify.py  test_wlfi.py
(+123 files in other folders)
