[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "market-data-recorder"
version = "0.4.7"
description = "Open-source Superior desktop app for Polymarket learning, explainable scanning, and paper-first prediction-market bots."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "duckdb>=1.2.1,<2.0.0",
  "httpx>=0.27.2,<1.0.0",
  "keyring>=25.6.0,<26.0.0",
  "platformdirs>=4.3.6,<5.0.0",
  "PySide6>=6.8.1,<7.0.0",
  "pydantic>=2.10.6,<3.0.0",
  "pydantic-settings>=2.7.1,<3.0.0",
  "structlog>=25.1.0,<26.0.0",
  "typer>=0.15.1,<1.0.0",
  "websockets>=15.0.1,<16.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
  "pytest-qt>=4.4.0,<5.0.0",
]
packaging = [
  "pyinstaller>=6.12.0,<7.0.0",
]

[project.scripts]
market-data-recorder = "market_data_recorder.cli:app"
market-data-recorder-app = "market_data_recorder_desktop.main:main"
market-data-recorder-qa = "market_data_recorder_desktop.qa_client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data_recorder", "src/market_data_recorder_desktop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
