[package]
name = "sup-v1-desktop-shell"
version = "0.1.0"
edition = "2021"
description = "SUP desktop rehearsal machine"
authors = ["Zwin"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
