[package]
name = "superior"
version = "0.1.0"
edition = "2021"
description = "Superior desktop app"
authors = ["Zwin"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
